--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/pi/.local/share/virtualenvs/homeProject--nrq-ECN/bin/python"
+    "python.pythonPath": ".venv/bin/python"
 }
