--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pylint = "*"
 
 [packages]
 requests = "*"
@@ -13,6 +12,7 @@ flask = "*"
 python-voicetext = "*"
 boto3 = "*"
 pyaudio = "*"
+mariadb = "*"
 
 [requires]
 python_version = "3.6"
