--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/_build/
+docs/
 
 # PyBuilder
 .pybuilder/
@@ -117,6 +117,7 @@ venv.bak/
 *.code-workspace
 logs/
 homeGate/cache/
+
 
 # Spyder project settings
 .spyderproject
